# OSCEM_Schemas

./: .cruft.json  .env.public  .gitignore  .linkmllint.yaml  404.html  CONTRIBUTING.md  LICENSE  Makefile  Makefile.rej  README.md  W3ID_SETUP.md  artifacts-README.md  config.public.mk  conversions.csv  conversions.xlsx  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
Acquisition/: index.html
Any/: index.html
AssemblyEnum/: index.html
Author/: index.html
Boolean/: index.html
BoundingBox2D/: index.html
ChromaticAberrationCorrector/: index.html
Curie/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Double/: index.html
EMDataset/: index.html
EnergyFilter/: index.html
Float/: index.html
Funder/: index.html
Grant/: index.html
Grid/: index.html
ImageSize/: index.html
Instrument/: Instrument_schema.json  index.html  test_data_invalid_missingrequired.json  test_data_invalid_typeerror.json  test_data_valid.json
Integer/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
Ligand/: index.html
LinkML/: overall_schema.json  overall_test.yaml  package.json  schema_sample.json  schema_sample_forajv.json  test_ajv.js  test_pythonlib_jsonschema.py  testschema_acquisition_v2.yaml  testschema_instrument.yaml  testschema_mixin_tomo.yaml  tomo_example.json
Molecule/: index.html
MoleculeClassEnum/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
OrganizationTypeEnum/: index.html
OverallMolecule/: index.html
Person/: index.html
Phaseplate/: index.html
Processing/: CTF_estimation.json  README.md  classes2D.json  classes3D.json  import_movies.json  initial_volume.json  movie_alignment.json  movie_maxshift.json  particle_picking.json  processing.json  processing_valid_example.json
QuantityValue/: index.html
Range/: index.html
Sample/: Sample_schema.json  Sample_valid.json  Sample_wild_schema.json  index.html
Series/: index.html
Sparqlpath/: index.html
SpecialistOptics/: index.html
Specimen/: index.html
SphericalAberrationCorrector/: index.html
String/: index.html
TiltAngle/: index.html
Time/: index.html
Uri/: index.html
Uriorcurie/: index.html
about/: index.html
acceleration_voltage/: index.html
acquisition/: index.html
artifacts/: index.html
assembly/: index.html
authors/: index.html
beamshift/: index.html
beamtilt/: index.html
beamtiltgroups/: index.html
binning_camera/: index.html
budget/: index.html
buffer/: index.html
c2_aperture/: index.html
calibrated_defocus/: index.html
calibrated_magnification/: index.html
cellular_tomo/: index.html
chromatic_aberration_corrector/: index.html
concentration/: index.html
country/: index.html
cryogen/: index.html
cs/: index.html
date_time/: index.html
detector/: index.html
detector_mode/: index.html
dose_per_movie/: index.html
electron_source/: index.html
email/: index.html
embedding/: index.html
end_date/: index.html
energy_filter/: index.html
env_tomo/: index.html
examples/: EMDataset-001.yaml  EMDataset-invalid-001.yaml  README.md  example_valid_cellular_tomo.yaml  example_valid_env_tomo.yaml  example_valid_spa.yaml  example_valid_subtomo.yaml  example_valid_tomo.yaml
exposure_time/: index.html
expression_system/: index.html
film_material/: index.html
film_support/: index.html
film_thickness/: index.html
film_topology/: index.html
first_name/: index.html
frames_per_movie/: index.html
funder/: index.html
gainref_flip_rotate/: index.html
gene_name/: index.html
general/: index.html
grants/: index.html
grid/: index.html
grids_imaged/: index.html
has_unit/: index.html
has_value/: index.html
height/: index.html
holder/: index.html
holder_cryogen/: index.html
humidity/: index.html
illumination/: index.html
image_size/: index.html
images_generated/: index.html
imageshift/: index.html
imaging/: index.html
increment/: index.html
instrument/: index.html
instrument_type/: index.html
ligands/: index.html
manufacturer/: index.html
material/: index.html
maximal/: index.html
mesh/: index.html
microscope/: index.html
microscope_software/: index.html
minimal/: index.html
model/: index.html
molecular_class/: index.html
molecular_type/: index.html
molecular_weight/: index.html
molecule/: index.html
name/: index.html
name_mol/: index.html
name_org/: index.html
name_sample/: index.html
natural_source/: index.html
nominal_defocus/: index.html
orcid/: index.html
(+14737 files in other folders)
