[tool.poetry]
name = "oscem_schemas"
version = "0.1.0"
description = "Schema for the Open Standards Community for Electron Microscopy (OSC-EM)"
authors = [
    {name="Spencer Bliven", email="spencer.bliven@gmail.com"},
    {name="Yves Tittes"},
    {name="Carlos Oscar S. Sorzano"},
    {name="Lola Sánchez de Lara García"},
    {name="Despina Adamopoulou"},
]
license = "BSD-3"
readme = "README.md"
include = ["README.md", "src/oscem_schemas/schema"]
keywords = ["electron microscopy", "schemas", "linkml", "open standards"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: File Formats :: JSON :: JSON Schema",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
linkml-runtime = "^1.1.24"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.group.dev.dependencies]
linkml = "^1.3.5"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^1.1.1"
schemasheets = "^0.1.14"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material", "mkdocs-mermaid2-plugin"]

[tool.poetry.urls]
homepage = "https://osc-em.github.io/"
repository = "https://github.com/osc-em/oscem-schemas"
documentation = "https://osc-em.github.io/oscem-schemas/"
